# GPT-tokenizer

./: .gitignore  .last_docs_update  .readthedocs.yml  EXPERT-DOC-AGENT-README.md  GITHUB_PAGES_SETUP.md  README.md  README_RTD_SETUP.md  docs-agent-config.json  docs-template.html  expert-doc-writer.py  launch-docs-agent.sh  main.py  pyproject.toml  requirements-agent.txt  requirements-dev.txt  requirements.txt  setup.py  train.py  usage_guide.md
.github/workflows/: auto-docs.yml  deploy-pages.yml  docs.yml
docs/: API.md  ARCHITECTURE.md  Makefile  README.md  conf.py  examples.rst  getting-started.md  index.rst  requirements.txt
docs/_build/html/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  examples.doctree  index.doctree
docs/_build/html/_sources/: index.rst.txt
docs/api/: modules.rst
minbpe/: __init__.py  base.py  basic_tokenizer.py  gpt4_bpe_tokenizer.py  regex_tokenizer.py
prompts/: diagram_creation_prompt.md  documentation_automation_lightweight.md  documentation_automation_master.md
scripts/: monitor-builds.sh  tok400.model  tok400.vocab  tokenisation.ipynb  toy.txt
tests/: test_tokenizer.py
