[project]
name = "gpt-tokenizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "peft>=0.17.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
    "trl>=0.21.0",
]
